--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="dev.yanshouwang.camerax">
+    package="dev.yanshouwang.camerax">
+
+    <uses-permission android:name="android.permission.CAMERA" />
 </manifest>
