--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: camerax
 description: A camera plugin for flutter, which use CameraX on Android, native API on iOS, supports preview and image analysis.
 version: 0.0.1
-author: yanshouwang
 homepage: https://github.com/yanshouwang/camerax
+publish_to: https://pub.dev
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
