--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,14 +4,19 @@ version '1.0-SNAPSHOT'
 buildscript {
     ext.kotlin_version = '1.3.50'
     ext.camerax_version = '1.0.0-rc01'
+    ext.hms_version = '1.3.0.300'
     repositories {
         google()
         jcenter()
+        // Add HMS Core SDK repository
+        maven {url 'https://developer.huawei.com/repo/'}
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // Add agcp dependency
+        classpath 'com.huawei.agconnect:agcp:1.4.2.300'
     }
 }
 
@@ -19,11 +24,14 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
+        // Add HMS Core SDK repository
+        maven {url 'https://developer.huawei.com/repo/'}
     }
 }
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.huawei.agconnect'
 
 android {
     compileSdkVersion 29
@@ -43,4 +51,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "com.huawei.hms:scan:$hms_version"
 }
