--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     ext.kotlin_version = '1.3.50'
-    ext.camerax_version = '1.0.0-rc01'
+    ext.camerax_version = '1.1.0-alpha01'
     repositories {
         google()
         jcenter()
