--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation 'com.google.mlkit:barcode-scanning:16.1.1'
 }
