--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -43,6 +43,19 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
+  assets:
+    - images/contact.png
+    - images/email.png
+    - images/event.png
+    - images/isbn.png
+    - images/location.png
+    - images/product.png
+    - images/sms.png
+    - images/tel.png
+    - images/text.png
+    - images/website.png
+    - images/wifi.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
