--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: camerax
-description: A camera plugin for flutter, which use CameraX on Android, native API on iOS, supports preview and image analysis.
+description: A camera plugin for flutter, which use CameraX on Android, native API on iOS, supports camera preview, capture and analyze.
 version: 0.0.3
 homepage: https://github.com/yanshouwang/camerax
 publish_to: https://pub.dev
