--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,15 +2,15 @@ group 'dev.yanshouwang.camerax'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.4.21'
-    ext.camerax_version = '1.1.0-alpha01'
+    ext.kotlin_version = '1.6.10'
+    ext.camerax_version = '1.2.0-beta01'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.4'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -18,7 +18,7 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -26,7 +26,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -43,5 +43,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation 'com.google.mlkit:barcode-scanning:16.1.1'
+    implementation "androidx.camera:camera-mlkit-vision:$camerax_version"
+    implementation 'com.google.mlkit:barcode-scanning:17.0.2'
 }
