--- a/camerax_android/android/build.gradle
+++ b/camerax_android/android/build.gradle
@@ -3,6 +3,7 @@ version = "1.0-SNAPSHOT"
 
 buildscript {
     ext.kotlin_version = "1.7.10"
+    ext.camerax_version = "1.3.4"
     repositories {
         google()
         mavenCentral()
@@ -50,6 +51,20 @@ android {
     }
 
     dependencies {
+        // The following line is optional, as the core library is included indirectly by camera-camera2
+        implementation "androidx.camera:camera-core:${camerax_version}"
+        implementation "androidx.camera:camera-camera2:${camerax_version}"
+        // If you want to additionally use the CameraX Lifecycle library
+        implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+        // If you want to additionally use the CameraX VideoCapture library
+        implementation "androidx.camera:camera-video:${camerax_version}"
+        // If you want to additionally use the CameraX View class
+        implementation "androidx.camera:camera-view:${camerax_version}"
+        // If you want to additionally add CameraX ML Kit Vision Integration
+        //implementation "androidx.camera:camera-mlkit-vision:${camerax_version}"
+        // If you want to additionally use the CameraX Extensions library
+        implementation "androidx.camera:camera-extensions:${camerax_version}"
+
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
     }
@@ -59,9 +74,9 @@ android {
             useJUnitPlatform()
 
             testLogging {
-               events "passed", "skipped", "failed", "standardOut", "standardError"
-               outputs.upToDateWhen {false}
-               showStandardStreams = true
+                events "passed", "skipped", "failed", "standardOut", "standardError"
+                outputs.upToDateWhen { false }
+                showStandardStreams = true
             }
         }
     }
