--- a/camerax_android/example/pubspec.yaml
+++ b/camerax_android/example/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  camerax_platform_interface:
+    path: ../../camerax_platform_interface
   camerax_android:
     # When depending on this package from a real application you should use:
     #   camerax_android: ^x.y.z
@@ -28,6 +30,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  clover: ^3.0.0
+  logging: ^1.2.0
+  hybrid_logging: ^1.0.0
+  material_symbols_icons: ^4.2762.0
 
 dev_dependencies:
   integration_test:
@@ -40,7 +46,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
