--- a/camerax_android/android/build.gradle
+++ b/camerax_android/android/build.gradle
@@ -48,22 +48,24 @@ android {
 
     defaultConfig {
         minSdk = 21
+        // Keeping the classes from being removed by proguard.
+        consumerProguardFiles 'consumer-rules.pro'
     }
 
     dependencies {
         // The following line is optional, as the core library is included indirectly by camera-camera2
-        implementation "androidx.camera:camera-core:${camerax_version}"
-        implementation "androidx.camera:camera-camera2:${camerax_version}"
+        api "androidx.camera:camera-core:${camerax_version}"
+        api "androidx.camera:camera-camera2:${camerax_version}"
         // If you want to additionally use the CameraX Lifecycle library
-        implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+        api "androidx.camera:camera-lifecycle:${camerax_version}"
         // If you want to additionally use the CameraX VideoCapture library
-        implementation "androidx.camera:camera-video:${camerax_version}"
+        //api "androidx.camera:camera-video:${camerax_version}"
         // If you want to additionally use the CameraX View class
-        implementation "androidx.camera:camera-view:${camerax_version}"
+        api "androidx.camera:camera-view:${camerax_version}"
         // If you want to additionally add CameraX ML Kit Vision Integration
-        //implementation "androidx.camera:camera-mlkit-vision:${camerax_version}"
+        //api "androidx.camera:camera-mlkit-vision:${camerax_version}"
         // If you want to additionally use the CameraX Extensions library
-        implementation "androidx.camera:camera-extensions:${camerax_version}"
+        //api "androidx.camera:camera-extensions:${camerax_version}"
 
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
