--- a/camerax_ios/example/pubspec.yaml
+++ b/camerax_ios/example/pubspec.yaml
@@ -5,7 +5,7 @@ description: "Demonstrates how to use the camerax_ios plugin."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -17,6 +17,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  camerax_platform_interface:
+    path: ../../camerax_platform_interface
   camerax_ios:
     # When depending on this package from a real application you should use:
     #   camerax_ios: ^x.y.z
@@ -28,6 +30,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  clover: ^3.0.0
+  logging: ^1.2.0
+  hybrid_logging: ^1.0.0
+  material_symbols_icons: ^4.2762.0
 
 dev_dependencies:
   integration_test:
