--- a/camerax_platform_interface/pubspec.yaml
+++ b/camerax_platform_interface/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+  logging: ^1.2.0
+  hybrid_logging: ^1.0.0
 
 dev_dependencies:
   flutter_test:
