--- a/camerax_ios/ffigen.yaml
+++ b/camerax_ios/ffigen.yaml
@@ -2,41 +2,30 @@
 name: CameraXiOSLibrary
 description: iOS Library for CameraX.
 language: objc
-output: "lib/src/ffi1.g.dart"
-compiler-opts:
-  - '-F/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/System/Library/Frameworks'
-  - '-F/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/System/iOSSupport/System/Library/Frameworks'
-  # - '-F/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk/System/Library/Frameworks'
-  # - '-mios-version-min=12.0'
-  # - '-isysroot'
-  # - '/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk'
+output: "lib/src/ffi.g.dart"
 headers:
   entry-points:
-    - '/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/System/Library/Frameworks/AVFoundation.framework/Headers/AVFoundation.h'
-    # - '/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk/System/Library/Frameworks/AVFoundation.framework/Headers/AVFoundation.h'
     - 'example/build/ios/Debug-iphonesimulator/camerax_ios/camerax_ios.framework/Headers/camerax_ios-Swift.h'
 exclude-all-by-default: true
 objc-interfaces:
   include:
-    - AVCaptureSession
-    - AVCaptureDevice
-    - AVCaptureInput
-    - AVCaptureDeviceInput
     - PreviewView
     - PreviewViewFactory
+    - CameraController
+    - CameraSelector
+    - ZoomState
+    - TorchState
+    - ImageProxy
   module:
     PreviewView: camerax_ios
     PreviewViewFactory: camerax_ios
-typedefs:
-  include:
-    - AVMediaType
-    - AVCaptureDeviceType
-    - AVLayerVideoGravity
-globals:
-  include:
-    - AVMediaType.*
-    - AVCaptureDeviceType.*
-    - AVLayerVideoGravity.*
+    CameraController: camerax_ios
+    CameraSelector: camerax_ios
+    ZoomState: camerax_ios
+    TorchState: camerax_ios
+    ImageProxy: camerax_ios
 enums:
   include:
-    - AVCaptureDevicePosition
+    - ScaleType
+    - LensFacing
+    - FlashMode
