Fix issues of takePicture.

--- a/camerax_ios/example/ios/Runner/Info.plist
+++ b/camerax_ios/example/ios/Runner/Info.plist
@@ -30,6 +30,8 @@
 	<string>Camera Usage Description</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Microphone Usage Description</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo Library Usage Description</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
