--- a/camerax_ios/example/pubspec.yaml
+++ b/camerax_ios/example/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   logging: ^1.2.0
   hybrid_logging: ^1.0.0
   material_symbols_icons: ^4.2762.0
+  photo_gallery: ^2.2.1
 
 dev_dependencies:
   integration_test:
