Add vision dependency.

--- a/camerax_android/android/build.gradle
+++ b/camerax_android/android/build.gradle
@@ -3,7 +3,7 @@ version = "1.0-SNAPSHOT"
 
 buildscript {
     ext.kotlin_version = "1.7.10"
-    ext.camerax_version = "1.3.4"
+    ext.camerax_version = "1.4.0-beta02"
     repositories {
         google()
         mavenCentral()
@@ -59,13 +59,13 @@ android {
         // If you want to additionally use the CameraX Lifecycle library
         api "androidx.camera:camera-lifecycle:${camerax_version}"
         // If you want to additionally use the CameraX VideoCapture library
-        //api "androidx.camera:camera-video:${camerax_version}"
+        api "androidx.camera:camera-video:${camerax_version}"
         // If you want to additionally use the CameraX View class
         api "androidx.camera:camera-view:${camerax_version}"
         // If you want to additionally add CameraX ML Kit Vision Integration
-        //api "androidx.camera:camera-mlkit-vision:${camerax_version}"
+        api "androidx.camera:camera-mlkit-vision:${camerax_version}"
         // If you want to additionally use the CameraX Extensions library
-        //api "androidx.camera:camera-extensions:${camerax_version}"
+        api "androidx.camera:camera-extensions:${camerax_version}"
 
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
