--- a/camerax_android/jnigen.yaml
+++ b/camerax_android/jnigen.yaml
@@ -30,6 +30,7 @@ classes:
   - androidx.camera.view.CameraController
   - androidx.camera.view.LifecycleCameraController
   - androidx.camera.view.PreviewView
+  - androidx.camera.mlkit.vision.MlKitAnalyzer
   - androidx.lifecycle.LifecycleOwner
   - androidx.lifecycle.LiveData
   - androidx.lifecycle.Observer
