--- a/camerax_android/pubspec.yaml
+++ b/camerax_android/pubspec.yaml
@@ -20,12 +20,12 @@ dependencies:
   logging: ^1.2.0
   hybrid_logging: ^1.0.0
   jni: ^0.10.1
+  hybrid_os: ^0.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-  pigeon: ^21.0.0
   jnigen: ^0.10.0
 
 flutter:
