--- a/camerax_android/android/build.gradle
+++ b/camerax_android/android/build.gradle
@@ -3,7 +3,7 @@ version = "1.0-SNAPSHOT"
 
 buildscript {
     ext.kotlin_version = "1.7.10"
-    ext.camerax_version = "1.3.4"
+    ext.camerax_version = "1.3.0-beta02"
     repositories {
         google()
         mavenCentral()
@@ -63,9 +63,17 @@ android {
         // If you want to additionally use the CameraX View class
         api "androidx.camera:camera-view:${camerax_version}"
         // If you want to additionally add CameraX ML Kit Vision Integration
-        // api "androidx.camera:camera-mlkit-vision:${camerax_version}"
+        api "androidx.camera:camera-mlkit-vision:${camerax_version}"
         // If you want to additionally use the CameraX Extensions library
         api "androidx.camera:camera-extensions:${camerax_version}"
+
+        api "com.google.mlkit:barcode-scanning:17.2.0"
+        api "com.google.mlkit:face-detection:16.1.6"
+        api "com.google.mlkit:image-labeling:17.0.8"
+        api "com.google.mlkit:object-detection:17.0.1"
+        api "com.google.mlkit:pose-detection:17.0.0"
+        api "com.google.mlkit:segmentation-selfie:16.0.0-beta5"
+        api "com.google.mlkit:text-recognition:16.0.0"
 
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
