--- a/camerax_android/example/pubspec.yaml
+++ b/camerax_android/example/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   logging: ^1.2.0
   hybrid_logging: ^1.0.0
   material_symbols_icons: ^4.2762.0
+  video_player: ^2.9.1
+  go_router: ^14.2.3
 
 dev_dependencies:
   integration_test:
