--- a/camerax_android/example/pubspec.yaml
+++ b/camerax_android/example/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   material_symbols_icons: ^4.2762.0
   video_player: ^2.9.1
   go_router: ^14.2.3
+  path: ^1.9.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   integration_test:
