--- a/camerax_ios/example/pubspec.yaml
+++ b/camerax_ios/example/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   hybrid_logging: ^1.0.0
   material_symbols_icons: ^4.2762.0
   photo_gallery: ^2.2.1
+  path_provider: ^2.1.4
+  path: ^1.9.0
+  video_player: ^2.9.1
+  go_router: ^14.2.6
 
 dev_dependencies:
   integration_test:
