--- a/camerax_linux/pubspec.yaml
+++ b/camerax_linux/pubspec.yaml
@@ -1,5 +1,5 @@
-name: camerax_android
-description: 'Android implementation of the camerax plugin.'
+name: camerax_linux
+description: 'Linux implementation of the camerax plugin.'
 version: 0.0.1
 repository: https://github.com/yanshouwang/camerax
 issue_tracker: https://github.com/yanshouwang/camerax/issues
@@ -16,22 +16,19 @@ dependencies:
     sdk: flutter
   camerax_platform_interface:
     path: ../camerax_platform_interface
-  jni: ^0.10.1
+  ffi: ^2.1.3
   logging: ^1.2.0
   hybrid_logging: ^1.0.0
-  hybrid_os: ^0.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-  jnigen: ^0.10.0
+  ffigen: ^14.0.1
 
 flutter:
   plugin:
-    implements: camerax
     platforms:
-      android:
-        package: dev.hebei.camerax_android
-        pluginClass: CameraXAndroidPlugin
-        dartPluginClass: CameraXAndroidPlugin
+      linux:
+        pluginClass: CameraXLinuxPlugin
+        dartPluginClass: CameraXLinuxPlugin
