--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -63,6 +63,26 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
+        },
+        {
+            "name": "camerax_linux",
+            "cwd": "camerax_linux/example",
+            "request": "launch",
+            "type": "dart"
+        },
+        {
+            "name": "camerax_linux (profile mode)",
+            "cwd": "camerax_linux/example",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "profile"
+        },
+        {
+            "name": "camerax_linux (release mode)",
+            "cwd": "camerax_linux/example",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "release"
         }
     ]
 }
