--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,8 +26,20 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 33
+    namespace "dev.yanshouwang.camerax"
+    compileSdkVersion flutter.compileSdkVersion
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+    buildFeatures {
+        buildConfig = true
+    }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
