--- a/camerax/example/pubspec.yaml
+++ b/camerax/example/pubspec.yaml
@@ -28,6 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  logging: ^1.3.0
+  hybrid_logging: ^1.0.0
+  go_router: ^14.6.3
+  clover: ^4.0.0
+  path: ^1.9.0
+  path_provider: ^2.1.5
+  material_symbols_icons: ^4.2801.1
+  video_player: ^2.9.2
 
 dev_dependencies:
   integration_test:
