--- a/camerax/example/pubspec.yaml
+++ b/camerax/example/pubspec.yaml
@@ -6,6 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
   sdk: ^3.6.0
+resolution: workspace
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,9 +33,9 @@ dependencies:
   hybrid_logging: ^1.0.0
   go_router: ^14.6.3
   clover: ^4.0.0
+  material_symbols_icons: ^4.2801.1
   path: ^1.9.0
   path_provider: ^2.1.5
-  material_symbols_icons: ^4.2801.1
   video_player: ^2.9.2
 
 dev_dependencies:
