--- a/camerax/pubspec.yaml
+++ b/camerax/pubspec.yaml
@@ -15,10 +15,8 @@ resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
-  camerax_platform_interface:
-    path: ../camerax_platform_interface
-  camerax_android:
-    path: ../camerax_android
+  camerax_platform_interface: ^1.0.0-dev.0
+  camerax_android: ^1.0.0-dev.0
   meta: ^1.15.0
 
 dev_dependencies:
