--- a/camerax_android/example/pubspec.yaml
+++ b/camerax_android/example/pubspec.yaml
@@ -6,6 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
   sdk: ^3.6.0
+resolution: workspace
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -17,8 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  camerax_platform_interface:
-    path: ../../camerax_platform_interface
+  camerax_platform_interface: ^1.0.0-dev.0
   camerax_android:
     # When depending on this package from a real application you should use:
     #   camerax_android: ^x.y.z
