--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,10 @@ environment:
 workspace:
   - camerax_platform_interface
   - camerax_android
+  - camerax_android/example
   - camerax_ios
+  - camerax_ios/example
   - camerax_linux
+  - camerax_linux/example
   - camerax
+  - camerax/example
