--- a/camerax_linux/example/pubspec.yaml
+++ b/camerax_linux/example/pubspec.yaml
@@ -18,8 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  camerax_platform_interface:
-    path: ../../camerax_platform_interface
+  camerax_platform_interface: ^1.0.0-dev.0
   camerax_linux:
     # When depending on this package from a real application you should use:
     #   camerax_linux: ^x.y.z
@@ -31,14 +30,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  logging: ^1.2.0
-  hybrid_logging: ^1.0.0
-  go_router: ^14.2.3
-  clover: ^4.0.0
-  material_symbols_icons: ^4.2762.0
-  path: ^1.9.0
-  path_provider: ^2.1.4
-  video_player: ^2.9.1
 
 dev_dependencies:
   integration_test:
