--- a/camerax_ios/pubspec.yaml
+++ b/camerax_ios/pubspec.yaml
@@ -1,6 +1,6 @@
 name: camerax_ios
 description: 'iOS implementation of the camerax plugin.'
-version: 0.0.1
+version: 1.0.0-dev.0
 repository: https://github.com/yanshouwang/camerax
 issue_tracker: https://github.com/yanshouwang/camerax/issues
 topics:
@@ -15,18 +15,15 @@ resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
-  camerax_platform_interface:
-    path: ../camerax_platform_interface
-  ffi: ^2.1.3
-  objective_c: ^4.0.0
-  logging: ^1.2.0
-  hybrid_logging: ^1.0.0
+  camerax_platform_interface: ^1.0.0-dev.0
+  # ffi: ^2.1.3
+  # objective_c: ^4.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  ffigen: ^16.0.0
+  # ffigen: ^16.0.0
 
 flutter:
   plugin:
