--- a/camerax_linux/pubspec.yaml
+++ b/camerax_linux/pubspec.yaml
@@ -15,11 +15,8 @@ resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
-  camerax_platform_interface:
-    path: ../camerax_platform_interface
+  camerax_platform_interface: ^1.0.0-dev.0
   ffi: ^2.1.3
-  logging: ^1.3.0
-  hybrid_logging: ^1.0.0
 
 dev_dependencies:
   flutter_test:
