--- a/camerax_linux/pubspec.yaml
+++ b/camerax_linux/pubspec.yaml
@@ -1,6 +1,6 @@
 name: camerax_linux
 description: 'Linux implementation of the camerax plugin.'
-version: 0.0.1
+version: 1.0.0-dev.0
 repository: https://github.com/yanshouwang/camerax
 issue_tracker: https://github.com/yanshouwang/camerax/issues
 topics:
