--- a/camerax/example/pubspec.yaml
+++ b/camerax/example/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.5
   video_player: ^2.9.2
+  exif: ^3.3.0
 
 dev_dependencies:
   integration_test:
