Prepare for release 1.0.0

--- a/.github/workflows/publish_camerax_platform_interface.yml
+++ b/.github/workflows/publish_camerax_platform_interface.yml
@@ -1,18 +1,10 @@
-# .github/workflows/publish_camerax_platform_interface.yml
-name: Publish camerax_platform_interface to pub.dev
+name: Publish to pub.dev
 
 on:
   push:
     tags:
-      # must align with the tag-pattern configured on pub.dev, often just replace
-      # {{version}} with [0-9]+.[0-9]+.[0-9]+
-      - 'camerax_platform_interface-v[0-9]+.[0-9]+.[0-9]+' # tag-pattern on pub.dev: 'v{{version}}'
-    # If you prefer tags like '1.2.3', without the 'v' prefix, then use:
-    # - '[0-9]+.[0-9]+.[0-9]+' # tag-pattern on pub.dev: '{{version}}'
-    # If your repository contains multiple packages consider a pattern like:
-    # - 'my_package_name-v[0-9]+.[0-9]+.[0-9]+'
+      - 'camerax_platform_interface-[0-9]+.[0-9]+.[0-9]+*'
 
-# Publish using the reusable workflow from dart-lang.
 jobs:
   publish:
     permissions:
