--- a/camerax/example/pubspec.yaml
+++ b/camerax/example/pubspec.yaml
@@ -1,8 +1,8 @@
 name: camerax_example
-description: "Demonstrates how to use the camerax plugin."
+description: 'Demonstrates how to use the camerax plugin.'
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
   sdk: ^3.7.2
