--- a/camerax_android/android/build.gradle
+++ b/camerax_android/android/build.gradle
@@ -73,7 +73,8 @@ android {
         // implementation "com.google.mlkit:segmentation-selfie:16.0.0-beta5"
         // implementation "com.google.mlkit:text-recognition:16.0.0"
 
-        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.10.2"
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3'
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.10.2'
 
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
