--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,9 @@ migrate_working_dir/
 /pubspec.lock
 **/doc/api/
 .dart_tool/
-.flutter-plugins
 .flutter-plugins-dependencies
-build/
+/build/
+/coverage/
 
 # FVM Version Cache
 .fvm/
