--- a/camerax_android/android/build.gradle
+++ b/camerax_android/android/build.gradle
@@ -52,29 +52,29 @@ android {
 
     dependencies {
         // The following line is optional, as the core library is included indirectly by camera-camera2
-        implementation "androidx.camera:camera-core:${camerax_version}"
-        implementation "androidx.camera:camera-camera2:${camerax_version}"
+        api "androidx.camera:camera-core:${camerax_version}"
+        api "androidx.camera:camera-camera2:${camerax_version}"
         // If you want to additionally use the CameraX Lifecycle library
-        implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+        api "androidx.camera:camera-lifecycle:${camerax_version}"
         // If you want to additionally use the CameraX VideoCapture library
-        implementation "androidx.camera:camera-video:${camerax_version}"
+        api "androidx.camera:camera-video:${camerax_version}"
         // If you want to additionally use the CameraX View class
-        implementation "androidx.camera:camera-view:${camerax_version}"
+        api "androidx.camera:camera-view:${camerax_version}"
         // If you want to additionally add CameraX ML Kit Vision Integration
-        implementation "androidx.camera:camera-mlkit-vision:${camerax_version}"
+        api "androidx.camera:camera-mlkit-vision:${camerax_version}"
         // If you want to additionally use the CameraX Extensions library
-        implementation "androidx.camera:camera-extensions:${camerax_version}"
+        api "androidx.camera:camera-extensions:${camerax_version}"
 
-        implementation "com.google.mlkit:barcode-scanning:17.3.0"
-        implementation "com.google.mlkit:face-detection:16.1.7"
-        // implementation "com.google.mlkit:image-labeling:17.0.8"
-        // implementation "com.google.mlkit:object-detection:17.0.1"
-        // implementation "com.google.mlkit:pose-detection:17.0.0"
-        // implementation "com.google.mlkit:segmentation-selfie:16.0.0-beta5"
-        // implementation "com.google.mlkit:text-recognition:16.0.0"
+        api "com.google.mlkit:barcode-scanning:17.3.0"
+        api "com.google.mlkit:face-detection:16.1.7"
+        // api "com.google.mlkit:image-labeling:17.0.8"
+        // api "com.google.mlkit:object-detection:17.0.1"
+        // api "com.google.mlkit:pose-detection:17.0.0"
+        // api "com.google.mlkit:segmentation-selfie:16.0.0-beta5"
+        // api "com.google.mlkit:text-recognition:16.0.0"
 
-        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.10.2'
-        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.10.2'
+        // api 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.10.2'
+        api 'org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.10.2'
 
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
