--- a/camerax_android/pubspec.yaml
+++ b/camerax_android/pubspec.yaml
@@ -17,12 +17,15 @@ dependencies:
   flutter:
     sdk: flutter
   camerax_platform_interface: ^1.2.1
+  jni: ^0.15.2
+  logging: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   pigeon: ^26.0.2
+  jnigen: ^0.15.0
 
 flutter:
   plugin:
